Added editing of choices for attribute. Closes #13